manifests/deployment-2.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "alamo"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "alamo"
    spec:
      containers:
        - name: "alamo"
          image: "jhjkhkhlkh.azurecr.io/alamo"
          ports:
          - containerPort: 80
