manifests/deployment.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "vidarh"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "vidarh"
    spec:
      containers:
        - name: "vidarh"
          image: "regvidar.azurecr.io/vidarh"
          ports:
          - containerPort: 80
