manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "vidarh"
    labels:
        app: "vidarh"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: vidarh146d-vidarh.a0cf66334e9d42439cdd.westeurope.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "vidarh"
                servicePort: 80
